service-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-staging
  namespace: default
spec:
  selector:
    app: backend-staging
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
