service.staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: staging
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      appProtocol: http
      protocol: TCP
      port: 80
      targetPort: 4000
