backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testifi-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.testifi.ai
      secretName: testifi-tls
  rules:
    - host: app.testifi.ai
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
